--- a/css/status-bar.css
+++ b/css/status-bar.css
@@ -1,13 +1,15 @@
 .status-bar {
     display: flex;
     justify-content: center;
+    padding: 3px 5px;
+
 }
 
 .status-bar__column {
     width: 33%;
 }
 
-.status-bar__column:first-child span{
+.status-bar__column:first-child span {
     margin-right: 5px;
 }
 
@@ -19,6 +21,7 @@
 .status-bar__column:last-child {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .status-bar__column:last-child .fa-battery-full {
