--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import "reset.css";
 @import "status-bar.css";
+@import "variable.css";
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Open+Sans:wght@300&display=swap');
 
 body {
@@ -24,3 +25,27 @@ body {
     opacity: 0.6;
     font-weight: 300;
 }
+
+#login-form {
+    display: flex;
+    flex-direction: column;
+    margin: 0 30px;
+}
+
+#login-form input{
+    padding: 15px 0;
+    border: none;
+    font-size: 18px;
+    margin-bottom: 25px;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+    transition: border-color 0.3s ease-in-out;
+}
+
+#login-form input::placeholder {
+    color: rgba(0,0,0,0.4);
+}
+
+#login-form input:focus {
+    border-color: var(--yellow);
+}
+
