--- a/css/styles.css
+++ b/css/styles.css
@@ -37,15 +37,31 @@ body {
     border: none;
     font-size: 18px;
     margin-bottom: 25px;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
-    transition: border-color 0.3s ease-in-out;
 }
 
-#login-form input::placeholder {
-    color: rgba(0,0,0,0.4);
+#login-form input:not([type="submit"]) {
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+    transition: border-color 0.3s ease-in-out;
 }
 
 #login-form input:focus {
     border-color: var(--yellow);
 }
 
+#login-form input::placeholder {
+    color: rgba(0,0,0,0.4);
+}
+
+#login-form input[type="submit"] {
+    background-color: var(--yellow);
+    cursor: pointer;
+    padding: 20px 0;
+    border-radius: 5px;
+}
+
+#login-form a {
+    text-align: center;
+    text-decoration: none;
+    font-size: 13px;
+    color: inherit;
+}
